cli/tests/expand/invalid_usage/unknown_field.fail.stderr
error[E0609]: no field `address` on type `&TestServerOptions`
  --> tests/expand/invalid_usage/unknown_field.fail.rs:14:5
   |
14 |     #[clappen::__clappen_impl(prefix = "test", prefixed_fields = [unknown, config])]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unknown field
   |
   = note: this error originates in the attribute macro `clappen::__clappen_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
